--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <!-- MomentJS CDN -->
 <script src="https://cdn.jsdelivr.net/npm/moment@2.22.0/moment.min.js"></script>
 
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
+
 </head>
 <body>
 
@@ -29,7 +32,7 @@
   <div class="container">
 
     <!-- Jumbotron -->
-    <div class="jumbotron" style="background-color: brown; color: white">
+    <div class="jumbotron">
       <h1 class="text-center">Train Database</h1>
       <h3 class="text-center">Store and Calculate Train Times</h3>
     </div>
